fix header white space

--- a/stylesheets/index-stylesheet.css
+++ b/stylesheets/index-stylesheet.css
@@ -1,5 +1,6 @@
 * {
   text-align: center
+  margin: 0 auto;
   /*border: 1px solid black;*/
 }
 
